--- a/views/mascota_perfil.html
+++ b/views/mascota_perfil.html
@@ -114,7 +114,8 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../index.html" class="breadcrumb-link">Inicio</a></li>
                 <li class="breadcrumb-item"><a href="dashboard.html" class="breadcrumb-link">Dashboard</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Perfil Usuario</li>
+                <li class="breadcrumb-item"><a href="mascotas.html" class="breadcrumb-link">Mascotas</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Información Mascota</li>
             </ol>
         </nav>
     </div>
@@ -122,44 +123,43 @@
     <!-- Contenido de la página -->
     <div>
         <content id="perfil_usuario">
-
                 <div class="container">                
                     <div class="mx-auto text-justify" style="max-width: 600px;">
 
-                        <!-- Perfil de usuario -->
+                        <!-- Perfil de Mascota -->
                         <div class="card shadow-lg p-5">
-                            <h2>Perfil de Usuario</h2>
+                            <h2>Información de Mascota</h2>
                             <hr><br>
                                                                                 
                             <!-- Campos subdivididos -->
                             <div class="list-group">
                                 <span class="list-group-item list-group-item-action">                                    
                                         <h5 class="mb-1">Nombre</h5>
-                                        <p class="mb-1">María López</p>                                        
+                                        <p class="mb-1">Luna</p>                                        
                                 </span>
                                 <span class="list-group-item list-group-item-action">
-                                    <h5 class="mb-1">Contacto</h5>
-                                        <p class="mb-1">Email: maria_lopez@mail.com</p>
-                                        <p class="mb-1">Teléfono: +569 9999999</p>                                
+                                    <h5 class="mb-1">Chip</h5>
+                                        <p class="mb-1">1234567890ABCDEF</p>                                    
                                 </span>
                                 <span class="list-group-item list-group-item-action">
-                                    <h5 class="mb-1">Dirección</h5>
-                                        <p class="mb-1">Av Siempre Viva 543 Depto 21</p>
-                                        <p class="mb-1">Recoleta, Región Metropolitana</p>                                
+                                    <h5 class="mb-1">Información</h5>
+                                        <p class="mb-1">Especie: Felina</p>
+                                        <p class="mb-1">Raza: Siamese</p>
+                                        <p class="mb-1">Edad: 8 meses</p>
+                                        <p class="mb-1">Sexo: Hembra</p>
+                                        <p class="mb-1">Esterilización: Sí</p>
                                 </span>
-                                <span class="list-group-item list-group-item-action">
-                                    
+                                <span class="list-group-item list-group-item-action">                                    
                                     <p>
                                         <a href="reserva_hora.html">Reservar cita | </a>
-                                        <a href="mascotas.html">Tus mascotas | </a>
-                                        <a href="">Deja tus comentarios | </a>
-                                        <a href="dashboard.html">Volver</a>
+                                        <a href="vacunas_mascota.html">Historial vacunas | </a>                                        
+                                        <a href="mascotas.html">Volver</a>
                                     </p>
                                     
                                 </span>                                  
                             </div>
                             <br>
-                            <a href="actualizar_usuario.html" class="btn btn-primary">Editar datos</a>
+                            <a href="actualizar_mascota.html" class="btn btn-primary">Editar información</a>
                         </div>                        
                     </div>
                 </div>            
