--- a/views/mascotas.html
+++ b/views/mascotas.html
@@ -134,13 +134,13 @@
                             <div class="list-group">
                                 <a href="#" class="list-group-item list-group-item-action">                                    
                                         <h5 class="mb-1">Tommy</h5>
-                                        <p class="mb-1">Especie: Perro</p>
+                                        <p class="mb-1">Especie: Canina</p>
                                         <p class="mb-1">Raza: Labrador Retriever</p>
                                         <p class="mb-1">Edad: 4 años</p>                                                                                                                                                                                                                  
                                 </a>
-                                <a href="#" class="list-group-item list-group-item-action">
+                                <a href="mascota_perfil.html" class="list-group-item list-group-item-action">
                                     <h5 class="mb-1">Luna</h5>
-                                        <p class="mb-1">Especie: Gato</p>
+                                        <p class="mb-1">Especie: Felina</p>
                                         <p class="mb-1">Raza: Siamese</p>
                                         <p class="mb-1">Edad: 2 años</p>                                                                          
                                 </a>                                
