--- a/views/registro.html
+++ b/views/registro.html
@@ -126,6 +126,18 @@
                     <br>
                     <form action="#" method="POST">
                         <div class="mb-3">
+                            <label for="username" class="form-label">Nombre de Usuario</label>
+                            <input type="text" class="form-control" placeholder="Ingresa tu nombre de usuario" id="username" name="username" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Contraseña</label>
+                            <input type="text" class="form-control" placeholder="Ingresa tus contraseña" id="password" name="password" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Repite Contraseña</label>
+                            <input type="text" class="form-control" placeholder="Ingresa tus contraseña" id="password" name="password" required>
+                        </div>
+                        <div class="mb-3">
                             <label for="rut" class="form-label">Rut</label>
                             <input type="text" class="form-control" placeholder="Ingresa tu RUT" id="rut" name="rut" required>
                         </div>
@@ -184,10 +196,9 @@
                         <button type="submit" class="btn btn-primary" onclick="mostrarAlertaExitoRegistro()">Registrarse</button>
                     </form>
                 </div>
-            </div>
-        </div>            
-    </section>
-</div>
+            </div>                 
+        </section>
+    </div>
 
     <!-- Footer de la página-->
     <div id="pie_pagina">
