--- a/views/agendamientos_usuario.html
+++ b/views/agendamientos_usuario.html
@@ -114,52 +114,40 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../index.html" class="breadcrumb-link">Inicio</a></li>
                 <li class="breadcrumb-item"><a href="dashboard.html" class="breadcrumb-link">Dashboard</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Perfil Usuario</li>
+                <li class="breadcrumb-item active" aria-current="page">Agendamientos</li>
             </ol>
         </nav>
     </div>
 
     <!-- Contenido de la página -->
     <div>
-        <content id="perfil_usuario">
+        <content id="vacunas_mascota">
 
                 <div class="container">                
                     <div class="mx-auto text-justify" style="max-width: 600px;">
 
-                        <!-- Perfil de usuario -->
+                        <!-- Historial de vacunas mascota -->
                         <div class="card shadow-lg p-5">
-                            <h2>Perfil de Usuario</h2>
+                            <h2>Agendamientos</h2>
                             <hr><br>
+                            <center>
+                                <h5><i>No tienes citas agendadas</i></h5>
+                            </center>
+                            <br>
+                            
                                                                                 
                             <!-- Campos subdivididos -->
-                            <div class="list-group">
+                            <div class="list-group">                                                                                                
                                 <span class="list-group-item list-group-item-action">                                    
-                                        <h5 class="mb-1">Nombre</h5>
-                                        <p class="mb-1">María López</p>                                        
-                                </span>
-                                <span class="list-group-item list-group-item-action">
-                                    <h5 class="mb-1">Contacto</h5>
-                                        <p class="mb-1">Email: maria_lopez@mail.com</p>
-                                        <p class="mb-1">Teléfono: +569 9999999</p>                                
-                                </span>
-                                <span class="list-group-item list-group-item-action">
-                                    <h5 class="mb-1">Dirección</h5>
-                                        <p class="mb-1">Av Siempre Viva 543 Depto 21</p>
-                                        <p class="mb-1">Recoleta, Región Metropolitana</p>                                
-                                </span>
-                                <span class="list-group-item list-group-item-action">
-                                    
                                     <p>
-                                        <a href="reserva_hora.html">Reservar cita | </a>
-                                        <a href="mascotas.html">Tus mascotas | </a>
-                                        <a href="">Deja tus comentarios | </a>
-                                        <a href="dashboard.html">Volver</a>
-                                    </p>
-                                    
+                                        <a href="dashboard.html">Volver al dashboard | </a>
+                                        <a href="mascotas.html">Ir a tus mascotas | </a>
+                                        <a href="vacunatorio.html">Ir al vacunatorio</a>
+                                    </p>                                                                    
                                 </span>                                  
                             </div>
                             <br>
-                            <a href="actualizar_usuario.html" class="btn btn-primary">Editar datos</a>
+                            <a href="reserva_hora.html" class="btn btn-primary">Agendar nueva cita</a>
                         </div>                        
                     </div>
                 </div>            
