--- a/views/comentarios.html
+++ b/views/comentarios.html
@@ -37,13 +37,13 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>                       
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="reserva_hora.html">Reservar</a>
+                            <a class="nav-link" href="../views/contacto.html">Reservar</a>
                         </li>
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="vacunatorio.html">Vacunatorio</a>
+                            <a class="nav-link" href="../views/contacto.html">Vacunatorio</a>
                         </li>                                                                     
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="">Comentarios</a>
+                            <a class="nav-link" href="../views/contacto.html">Comentarios</a>
                         </li>                                            
                         <ul class="navbar-nav">
                             <li class="nav-item p-3">
@@ -54,15 +54,14 @@
                 </div>
 
                 <!-- Imagen genérica de usuario y nombre -->                
-                <a href="perfil_usuario.html" class="no-underline">
-                    <div class="nav-item p-3">
-                        <img src="../assets/img/generic_user.jpg" alt="User Icon" class="rounded me-2" width="40">
-                        <span>María López</span>
-                    </div>                    
-                </a>                    
+                <div class="nav-item p-3">
+                    <img src="../assets/img/generic_user.jpg" alt="User Icon" class="rounded-circle me-2" width="40">
+                    <span>María López</span>
+                </div>
             </div>
         </nav>
-    </div>    
+    </div>
+
     <!-- Header -->
     <div>
         <header>        
@@ -114,52 +113,76 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../index.html" class="breadcrumb-link">Inicio</a></li>
                 <li class="breadcrumb-item"><a href="dashboard.html" class="breadcrumb-link">Dashboard</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Perfil Usuario</li>
+                <li class="breadcrumb-item active" aria-current="page">Comentarios</li>
             </ol>
         </nav>
     </div>
-
+    
     <!-- Contenido de la página -->
     <div>
-        <content id="perfil_usuario">
-
+        
+        <!-- Sección de comentarios -->
+        <content id="comentarios">
                 <div class="container">                
                     <div class="mx-auto text-justify" style="max-width: 600px;">
 
-                        <!-- Perfil de usuario -->
+                        <!-- Comentarios de usuarios -->
                         <div class="card shadow-lg p-5">
-                            <h2>Perfil de Usuario</h2>
+                            <h2>Comentarios</h2>
                             <hr><br>
                                                                                 
-                            <!-- Campos subdivididos -->
+                            <!-- Listado de Comentarios -->
                             <div class="list-group">
                                 <span class="list-group-item list-group-item-action">                                    
-                                        <h5 class="mb-1">Nombre</h5>
-                                        <p class="mb-1">María López</p>                                        
+                                    <h5 class="mb-1">Juan Pérez</h5>
+                                    <p class="mb-1">@juanp</p>
+                                    <p class="mb-1">2024-06-28</p>
+                                    <p class="mb-1">5 estrellas</p>
+                                    <p class="custom-comment mb-1">Excelente atención, muy profesional y amable. Mi mascota recibió el mejor cuidado posible.</p>                                                                         
                                 </span>
                                 <span class="list-group-item list-group-item-action">
-                                    <h5 class="mb-1">Contacto</h5>
-                                        <p class="mb-1">Email: maria_lopez@mail.com</p>
-                                        <p class="mb-1">Teléfono: +569 9999999</p>                                
-                                </span>
+                                    <h5 class="mb-1">María López</h5>
+                                    <p class="mb-1">@marial</p>
+                                    <p class="mb-1">2024-06-27</p>
+                                    <p class="mb-1">4 estrellas</p>
+                                    <p class="custom-comment mb-1">Buen servicio, pero la espera fue un poco larga. En general, satisfecho con la atención.</p>                                                                          
+                                </span>                                
                                 <span class="list-group-item list-group-item-action">
-                                    <h5 class="mb-1">Dirección</h5>
-                                        <p class="mb-1">Av Siempre Viva 543 Depto 21</p>
-                                        <p class="mb-1">Recoleta, Región Metropolitana</p>                                
-                                </span>
+                                    <h5 class="mb-1">Carlos Sánchez</h5>
+                                    <p class="mb-1">@carloss</p>
+                                    <p class="mb-1">2024-06-26</p>
+                                    <p class="mb-1">3 estrellas</p>
+                                    <p class="custom-comment mb-1">La atención fue adecuada, pero creo que podría mejorar en algunos aspectos.</p>                                                                          
+                                </span>                                
                                 <span class="list-group-item list-group-item-action">
-                                    
-                                    <p>
-                                        <a href="reserva_hora.html">Reservar cita | </a>
-                                        <a href="mascotas.html">Tus mascotas | </a>
-                                        <a href="">Deja tus comentarios | </a>
-                                        <a href="dashboard.html">Volver</a>
-                                    </p>
-                                    
-                                </span>                                  
+                                    <h5 class="mb-1">Ana Martínez</h5>
+                                    <p class="mb-1">@anam</p>
+                                    <p class="mb-1">2024-06-25</p>
+                                    <p class="mb-1">5 estrellas</p>
+                                    <p class="custom-comment mb-1">¡Fantástico! La veterinaria San Blas es la mejor opción para el cuidado de nuestras mascotas.</p>                                                                          
+                                </span>                                
                             </div>
-                            <br>
-                            <a href="actualizar_usuario.html" class="btn btn-primary">Editar datos</a>
+
+                            <!-- Formulario para Ingresar Nuevo Comentario -->
+                            <div class="list-group mt-3">
+                                <form action="" method="post" class="list-group-item list-group-item-action">
+                                <h5 class="mb-1">Nuevo Comentario</h5>
+                                <div class="form-group">
+                                    <label for="calificacion">Calificación:</label>
+                                    <select id="calificacion" name="calificacion" class="form-control mb-1">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="comentario">Comentarios:</label>
+                                    <textarea id="comentario" name="comentario" class="form-control mb-1" rows="3"></textarea>
+                                </div>
+                                <a href="dashboard.html" type="submit" class="btn btn-primary">Enviar Comentario</a>
+                            </form>
                         </div>                        
                     </div>
                 </div>            
@@ -179,13 +202,13 @@
                 </div>
                 <br><br>
                 <!-- Enlace para suscribirse al newsletter -->
-            <div>
                 <div>
-                    <a href="../views/contacto.html">Formulario de Contacto |</a>
-                    <a href="../views/newsletter.html">Suscríbete a nuestro newsletter</a>
+                    <div>
+                        <a href="../views/contacto.html">Formulario de Contacto | </a>
+                        <a href="../views/newsletter.html">Suscríbete a nuestro newsletter</a>
+                    </div>
+                <hr>
                 </div>
-            <hr>
-            </div>
                 <span>© 2024 Veterinaria San Blas</span>
             </div>
         </footer>
