--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="vacunatorio.html">Vacunatorio</a>
                         </li>                                                                     
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="">Comentarios</a>
+                            <a class="nav-link" href="comentarios.html">Comentarios</a>
                         </li>                                            
                         <ul class="navbar-nav">
                             <li class="nav-item p-3">
@@ -144,11 +144,10 @@
                                     <h2>¡Bienvenid@ María!</h2>
                                     <hr><br>
                                     <p>¿Qué deseas hacer hoy?</p>
-                                    <p><a href="">Reservar cita</a></p>
-                                    <p><a href="reserva_hora.html">Administrar agendamientos</a></p>
+                                    <p><a href="reserva_hora.html">Reservar cita</a></p>
+                                    <p><a href="agendamientos_usuario.html">Administrar agendamientos</a></p>
                                     <p><a href="vacunatorio.html">Ir al vacunatorio</a></p>
-                                    <p><a href="">Dejar opiniones y comentarios</a></p>
-                                                                       
+                                    <p><a href="comentarios.html">Dejar opiniones y comentarios</a></p>                                                                       
                                 </div>                            
                         </div>
                         <div class="col-lg-4 mb-4">
