--- a/views/dashboard_admin.html
+++ b/views/dashboard_admin.html
@@ -21,7 +21,7 @@
             <div class="container">
                 
                 <!-- Logo -->
-                <a class="navbar-brand">
+                <a class="navbar-brand" href="../index.html">
                     <img id="logo" src="../assets/img/logo.png" alt="Logo" width="60px">
                 </a>
 
@@ -34,16 +34,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">    
                     <ul class="navbar-nav">
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="../index.html">Inicio</a>
+                            <a class="nav-link" href="dashboard_admin.html">Inicio</a>
                         </li>                       
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="reserva_hora.html">Reservar</a>
+                            <a class="nav-link" href="">Clientes</a>
                         </li>
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="vacunatorio.html">Vacunatorio</a>
+                            <a class="nav-link" href="">Pacientes</a>
                         </li>                                                                     
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="">Comentarios</a>
+                            <a class="nav-link" href="">Reportes</a>
                         </li>                                            
                         <ul class="navbar-nav">
                             <li class="nav-item p-3">
@@ -57,9 +57,10 @@
                 <a href="perfil_usuario.html" class="no-underline">
                     <div class="nav-item p-3">
                         <img src="../assets/img/generic_user.jpg" alt="User Icon" class="rounded me-2" width="40">
-                        <span>María López</span>
+                        <span>Administrador</span>
                     </div>                    
-                </a>                    
+                </a>                         
+
             </div>
         </nav>
     </div>    
@@ -113,55 +114,52 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../index.html" class="breadcrumb-link">Inicio</a></li>
-                <li class="breadcrumb-item"><a href="dashboard.html" class="breadcrumb-link">Dashboard</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Perfil Usuario</li>
+                <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
             </ol>
         </nav>
     </div>
+    
+
 
     <!-- Contenido de la página -->
     <div>
-        <content id="perfil_usuario">
 
-                <div class="container">                
-                    <div class="mx-auto text-justify" style="max-width: 600px;">
+        <content id="dashboard">            
+                <div class="container">                    
 
-                        <!-- Perfil de usuario -->
-                        <div class="card shadow-lg p-5">
-                            <h2>Perfil de Usuario</h2>
-                            <hr><br>
-                                                                                
-                            <!-- Campos subdivididos -->
-                            <div class="list-group">
-                                <span class="list-group-item list-group-item-action">                                    
-                                        <h5 class="mb-1">Nombre</h5>
-                                        <p class="mb-1">María López</p>                                        
-                                </span>
-                                <span class="list-group-item list-group-item-action">
-                                    <h5 class="mb-1">Contacto</h5>
-                                        <p class="mb-1">Email: maria_lopez@mail.com</p>
-                                        <p class="mb-1">Teléfono: +569 9999999</p>                                
-                                </span>
-                                <span class="list-group-item list-group-item-action">
-                                    <h5 class="mb-1">Dirección</h5>
-                                        <p class="mb-1">Av Siempre Viva 543 Depto 21</p>
-                                        <p class="mb-1">Recoleta, Región Metropolitana</p>                                
-                                </span>
-                                <span class="list-group-item list-group-item-action">
-                                    
-                                    <p>
-                                        <a href="reserva_hora.html">Reservar cita | </a>
-                                        <a href="mascotas.html">Tus mascotas | </a>
-                                        <a href="">Deja tus comentarios | </a>
-                                        <a href="dashboard.html">Volver</a>
-                                    </p>
-                                    
-                                </span>                                  
-                            </div>
-                            <br>
-                            <a href="actualizar_usuario.html" class="btn btn-primary">Editar información</a>
-                        </div>                        
-                    </div>
+                    <div class="row">
+                        <div class="col-lg-4 mb-4">                            
+                            <a href="pacientes.html" class="no-underline">
+                                <!-- Contenedor sombreado tipo card-->
+                                <div class="card shadow-lg p-5 custom-card" style="background-color: #87cf56;">
+                                    <h2>Pacientes</h2>
+                                    <hr><br>
+                                    <img src="../assets/img/card3.jpg" class="card-img custom-width" alt="Card3">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-lg-4 mb-4">                            
+                            <a href="agenda.html" class="no-underline">
+                                <!-- Contenedor sombreado tipo card-->
+                                <div class="card shadow-lg p-5 custom-card">
+                                    <h2>Agenda</h2>
+                                    <hr><br>
+                                    <img src="../assets/img/agenda.jpeg" class="card-img custom-width" alt="Card3">
+                                </div>
+                            </a>                            
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <a href="clientes.html" class="no-underline">
+
+                                <!-- Contenedor sombreado tipo card-->
+                                <div class="card shadow-lg p-5 custom-card" style="background-color: #7264C9;">
+                                    <h2>Clientes</h2>
+                                    <hr><br>
+                                    <img src="../assets/img/card4.jpg" class="card-img custom-width" alt="Card4">
+                                </div>
+                            </a>
+                        </div>                                       
+                    </div>                    
                 </div>            
         </content>
     </div>
@@ -180,10 +178,10 @@
                 <br><br>
                 <!-- Enlace para suscribirse al newsletter -->
             <div>
-                <div>
-                    <a href="../views/contacto.html">Formulario de Contacto |</a>
-                    <a href="../views/newsletter.html">Suscríbete a nuestro newsletter</a>
-                </div>
+            <div>
+                <a href="../views/contacto.html">Formulario de Contacto |</a>
+                <a href="../views/newsletter.html">Suscríbete a nuestro Newsletter</a>
+            </div>
             <hr>
             </div>
                 <span>© 2024 Veterinaria San Blas</span>
