--- a/views/paciente_perfil.html
+++ b/views/paciente_perfil.html
@@ -37,13 +37,13 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>                       
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="reserva_hora.html">Reservar</a>
+                            <a class="nav-link" href="">Clientes</a>
                         </li>
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="vacunatorio.html">Vacunatorio</a>
+                            <a class="nav-link" href="pacientes.html">Pacientes</a>
                         </li>                                                                     
                         <li class="nav-item p-3">
-                            <a class="nav-link" href="">Comentarios</a>
+                            <a class="nav-link" href="">Reportes</a>
                         </li>                                            
                         <ul class="navbar-nav">
                             <li class="nav-item p-3">
@@ -54,12 +54,11 @@
                 </div>
 
                 <!-- Imagen genérica de usuario y nombre -->                
-                <a href="perfil_usuario.html" class="no-underline">
-                    <div class="nav-item p-3">
-                        <img src="../assets/img/generic_user.jpg" alt="User Icon" class="rounded me-2" width="40">
-                        <span>María López</span>
-                    </div>                    
-                </a>                    
+                <div class="nav-item p-3">
+                    <img src="../assets/img/generic_user.jpg" alt="User Icon" class="rounded-circle me-2" width="40">
+                    <span>Administrador</span>
+                </div>                        
+
             </div>
         </nav>
     </div>    
@@ -113,53 +112,63 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="../index.html" class="breadcrumb-link">Inicio</a></li>
-                <li class="breadcrumb-item"><a href="dashboard.html" class="breadcrumb-link">Dashboard</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Perfil Usuario</li>
+                <li class="breadcrumb-item"><a href="dashboard_admin.html" class="breadcrumb-link">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="pacientes.html" class="breadcrumb-link">Pacientes</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Perfil Paciente</li>
             </ol>
         </nav>
     </div>
-
+    
     <!-- Contenido de la página -->
     <div>
-        <content id="perfil_usuario">
-
+        <content id="perfil_paciente">
                 <div class="container">                
                     <div class="mx-auto text-justify" style="max-width: 600px;">
 
-                        <!-- Perfil de usuario -->
+                        <!-- Perfil de Mascota -->
                         <div class="card shadow-lg p-5">
-                            <h2>Perfil de Usuario</h2>
+                            <h2>Perfil de Paciente</h2>
                             <hr><br>
                                                                                 
                             <!-- Campos subdivididos -->
                             <div class="list-group">
                                 <span class="list-group-item list-group-item-action">                                    
                                         <h5 class="mb-1">Nombre</h5>
-                                        <p class="mb-1">María López</p>                                        
+                                        <p class="mb-1">Bella</p>                                        
                                 </span>
                                 <span class="list-group-item list-group-item-action">
-                                    <h5 class="mb-1">Contacto</h5>
-                                        <p class="mb-1">Email: maria_lopez@mail.com</p>
-                                        <p class="mb-1">Teléfono: +569 9999999</p>                                
+                                    <h5 class="mb-1">Chip</h5>
+                                        <p class="mb-1">987654321FEDCBA</p>                                    
                                 </span>
                                 <span class="list-group-item list-group-item-action">
-                                    <h5 class="mb-1">Dirección</h5>
-                                        <p class="mb-1">Av Siempre Viva 543 Depto 21</p>
-                                        <p class="mb-1">Recoleta, Región Metropolitana</p>                                
+                                    <h5 class="mb-1">Información</h5>
+                                        <p class="mb-1">Especie: Felina</p>
+                                        <p class="mb-1">Raza: Persian</p>
+                                        <p class="mb-1">Edad: 3 años</p>
+                                        <p class="mb-1">Sexo: Hembra</p>
+                                        <p class="mb-1">Esterilización: Sí</p>
                                 </span>
-                                <span class="list-group-item list-group-item-action">
-                                    
+                                <a href="cliente_perfil.html" class="list-group-item list-group-item-action">
+                                    <h5 class="mb-1">Información Cliente</h5>
+                                        <p class="mb-1">Nombre: Ana López</p>
+                                        <p class="mb-1">Rut: 222-2</p>
+                                        <p class="mb-1">Email: ana_lopez@mail.com</p>
+                                        <p class="mb-1">Teléfono: +569 88888888</p>
+                                        <p class="mb-1">Dirección: San Ruperto #345, Colina, Región Metropolitana</p>                                        
+                                </a>
+                                <span class="list-group-item list-group-item-action">                                    
                                     <p>
-                                        <a href="reserva_hora.html">Reservar cita | </a>
-                                        <a href="mascotas.html">Tus mascotas | </a>
-                                        <a href="">Deja tus comentarios | </a>
-                                        <a href="dashboard.html">Volver</a>
+                                        <a href="">Formulario de atención | </a>
+                                        <a href="">Agendar consulta  | </a>                                        
+                                        <a href="pacientes.html">Volver</a>
                                     </p>
                                     
                                 </span>                                  
                             </div>
                             <br>
-                            <a href="actualizar_usuario.html" class="btn btn-primary">Editar información</a>
+                            <a href="actualizar_paciente.html" class="btn btn-primary">Editar información</a>
+                            <br>
+                            <a href="" class="btn btn-delete" style="background-color: red; border-color: red;">Eliminar paciente</a>
                         </div>                        
                     </div>
                 </div>            
@@ -179,13 +188,13 @@
                 </div>
                 <br><br>
                 <!-- Enlace para suscribirse al newsletter -->
-            <div>
                 <div>
-                    <a href="../views/contacto.html">Formulario de Contacto |</a>
-                    <a href="../views/newsletter.html">Suscríbete a nuestro newsletter</a>
+                    <div>
+                        <a href="../views/contacto.html">Formulario de Contacto | </a>
+                        <a href="../views/newsletter.html">Suscríbete a nuestro newsletter</a>
+                    </div>
+                <hr>
                 </div>
-            <hr>
-            </div>
                 <span>© 2024 Veterinaria San Blas</span>
             </div>
         </footer>
